--- a/pong/styles.css
+++ b/pong/styles.css
@@ -27,11 +27,16 @@ canvas {
   background-position: center;
 }
 
+.container {
+  position: relative;
+}
+
 .gui {
   position: absolute;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   width: 100%;
+  height: 100%;
 }
 
 .score, .prompt, .status {
@@ -64,15 +69,13 @@ canvas {
   grid-column: 1;
   grid-row: 1;
   font-size: 2.4rem;
+  line-height: 2;
   justify-self: center;
   display: flex;
-  padding-top: 1rem;
 }
 
 @media (orientation: landscape) {
-  /* .gui, canvas { max-width: 98vw; max-height: 98vh; } */
-  canvas { max-width: 90vw; max-height: 90vh; aspect-ratio: 7 / 4; }
-  .gui { aspect-ratio: 7 / 4; max-width: 90vw; max-height: 90vh; }
+  .container { aspect-ratio: 7 / 4; max-width: 90vw; max-height: 90vh; margin: auto; }
 }
 
 @media (orientation: portrait) {
